# python-powerdns

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGES  README.md  pyproject.toml
powerdns/: __init__.py  client.py  interface.py  models.py  old_models.py
scripts/: parse_gitattributes.py  sync_public_repo.sh
tests/: __init__.py  test_client.py  test_interface.py  test_models.py  test_old_models.py
