[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-powerdns"
requires-python = ">=3.11"
dynamic = ["version"]
description = "PowerDNS web api python client and interface"
readme = "README.md"
readme-content-type = "text/markdown"
license = "MIT"
authors = [
    { name = "Denis Pompilio (jawa)", email = "denis.pompilio@gmail.com" }
]
maintainers = [
    { name = "Denis Pompilio (jawa)", email = "denis.pompilio@gmail.com" }
]
keywords = ["dns", "powerdns", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Utilities"
]
dependencies = [
    "requests",
]

[project.urls]
homepage = "https://github.com/outini/python-powerdns"
repository = "https://github.com/outini/python-powerdns"

[tool.hatch.version]
path = "powerdns/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["powerdns"]

[tool.hatch.build.targets.wheel]
packages = ["powerdns"]
